add thread and keycallback

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,7 +64,8 @@
         "codecvt": "cpp",
         "map": "cpp",
         "regex": "cpp",
-        "ratio": "cpp"
+        "ratio": "cpp",
+        "thread": "cpp"
     },
     "cmake.configureOnOpen": false
 }
